# OmniCheck

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  TODO.MD  assets.yaml  assets_sources.yaml.example  config.yaml  cti.service  deploy.py  feeds.state.md  feeds.yaml  fonti.md  iaas-providers.json  iaas-providers.yaml  iaas-source.md  iaas.md  iaas_gen.py  implant.md  pyproject.toml  requirements.txt  source.feed.md  targets.example.json  targets.py
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
cti/: __init__.py  __main__.py  asset_sync.py  auth.py  config.py  core.py  main.py  registry.py  scheduler.py  setup_wizard.py  store.py  targets.py  tools.py
cti/sources/: __init__.py  _template.py  acn_misp.py  assets.py  atera.py  bgp.py  cloud_status.py  correlation.py  dnsmon.py  feeds.py  netlas.py  news_feed.py  opencti.py  rootmon.py  shodan.py  thc_rdns.py
cti/static/: index.html
cti/static/css/: app.css  badges.css  cockpit.css
cti/static/js/: api.js  app.js  components.js  render.js  state.js
docs/: ARCHITECTURE.md  SETUP.md  UI_COCKPIT.md
tests/: test_config.py  test_core.py  test_routes.py  test_sources.py
