[project]
name = "omnicheck"
version = "2.0.0"
description = "OmniCheck / CTI Sentinel — single-host monitoring & threat-intel engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "pyyaml==6.0.2",
  "feedparser==6.0.11",
  "shodan==1.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "pip-audit",
  "bandit",
]

[project.scripts]
omnicheck = "cti.__main__:main"

[tool.setuptools.packages.find]
include = ["cti*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
